# Alz_face_analyze

./: .gitignore  README.md  flow.md  pyproject.toml  repo_tree.txt
data/demographics/: EACS.csv  _details.txt
docs/memory_snapshot_2026-04-21/: MEMORY.md  project_details_and_discoveries.md  project_settings_env.md
docs/memory_snapshot_2026-04-24/: MEMORY.md  feedback_walkthrough_style.md  project_details_and_discoveries.md  project_external_datasets.md  project_settings_env.md
envs/: Alz_face_age.txt  Alz_face_analyze_emo.txt  Alz_face_api.txt  Alz_face_asymmetry.txt  Alz_face_embedding_other.txt  Alz_face_embedding_vggface.txt  Alz_face_emo_au_libreface.txt  Alz_face_emo_au_openface.txt  Alz_face_emo_au_other.txt  Alz_face_emo_au_pyfeat.txt  Alz_face_litmonitor.txt  Alz_face_main_analysis.txt  Alz_face_rotation.txt  Alz_face_test_2.txt  Alz_face_ui.txt  README.md  libreface.txt
memory_backup/: project_literature_monitor.md  project_settings_env.md
references/: README.md  _indexed.json
scripts/: README.md  _paths.py  _plotting.py  _utils.py  calibrate_age_prediction.py  compare_features.py  compute_emotion_scores.py  demographics_statistics.py  extract_original_features.py  plot_predicted_ages.py  plot_tabpfn_meta_by_n_features.py  plot_valence_arousal.py  plot_xgboost_meta_by_n_features.py  predict_ages.py  prepare_feature.py  run_analyze.py  run_full_features_classifier.py  run_m3m4_deep_analysis.py  run_meta_analysis.py  run_tabpfn_m1m2_512.py  run_xgboost_modules.py  test_feature_extract.py  test_preprocess.py
src/: __init__.py  cohort.py  config.py
(+1443 files in other folders)
