[project]
name = "alz-face-analyze"
version = "0.1.0"
description = "Alzheimer's facial multi-modality analysis (age, emotion/AU, asymmetry, rotation, embedding)"
authors = [
    {name = "a7266165", email = "M123020018@student.nsysu.edu.tw"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <3.12"

# 此檔僅作為 project root anchor 與 metadata；實際依賴由 envs/*.txt + envs/README.md 描述的
# 多個 conda env 各自管理（torch wheel index、tool-specific lib 衝突無法用單一 lockfile）。
